--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -78,24 +78,23 @@
   <!-- SKILLS -->
   {% if resume.SKILLS.enabled %}
   <section class="skill">
-    <h3 class="h3 skills-title">{{resume.SKILLS.label}}</h3>
-    <ul class="skills-list content-card">
-      {% for item in resume.SKILLS["items"] %}
+
+  <h3 class="h3 skills-title">{{ resume.SKILLS.label }}</h3>
+
+  <ul class="skills-list content-card">
+
+    {% for item in resume.SKILLS["items"] %}
       <li class="skills-item">
-        <div class="title-wrapper">
-          <h5 class="h5">{{item.skill}}</h5>
-          {% if resume.SKILLS.display_percentage_values %}
-          <data value="{{item.proficiency[:-1]}}">{{item.proficiency}}</data>
-          {% endif %}
-        </div>
-        {% if resume.SKILLS.display_progress_bars %}
-        <div class="skill-progress-bg">
-          <div class="skill-progress-fill" style="width: {{item.proficiency}};"></div>
-        </div>
+        <span class="skill-name">{{ item.skill }}</span>
+        {% if item.proficiency %}
+          <span class="skill-level"> – {{ item.proficiency }}</span>
         {% endif %}
       </li>
-      {% endfor %}
-    </ul>
-  </section>
+    {% endfor %}
+
+  </ul>
+
+</section>
+
   {% endif %}
 </article>
