--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -82,7 +82,7 @@
     <ul class="skills-list content-card">
       {% for item in resume.SKILLS["items"] %}
       <li class="skills-item">
-        <div class="title-wrapper">
+        <div class="title-wrapper" font-color="white">
           <h5 class="h5">{{item.skill}}</h5>
           {% if resume.SKILLS.display_percentage_values %}
           <data value="{{item.proficiency[:-1]}}">{{item.proficiency}}</data>
