--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -96,4 +96,14 @@
     </ul>
   </section>
   {% endif %}
+
+  <header>
+    <h2 class="h2 article-title">{{ resume.HEADER.label }}</h2>
+    <!-- Download button -->
+    <a href="/static/CV.pdf" 
+       class="download-btn"
+       download>
+      Download CV
+    </a>
+  </header>
 </article>
