--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -3,6 +3,14 @@
   <header>
     <h2 class="h2 article-title">{{resume.HEADER.label}}</h2>
   </header>
+    <header>
+    <!-- Download button -->
+    <a href="/images/CV.pdf" 
+       class="download-btn"
+       download>
+      Download CV
+    </a>
+  </header>
 
   <!-- EDUCATION -->
   {% if resume.EDUCATION.enabled %}
@@ -97,13 +105,5 @@
   </section>
   {% endif %}
 
-  <header>
-    <h2 class="h2 article-title">{{ resume.HEADER.label }}</h2>
-    <!-- Download button -->
-    <a href="/static/CV.pdf" 
-       class="download-btn"
-       download>
-      Download CV
-    </a>
-  </header>
+
 </article>
