--- a/src/jinja/blog.j2
+++ b/src/jinja/blog.j2
@@ -1,5 +1,5 @@
 <!-- blog.j2 -->
-<article class="blog" data-page="blog">
+<article class="Certifications" data-page="blog">
   <header>
     <h2 class="h2 article-title">{{blog.HEADER.label}}</h2>
   </header>
