--- a/src/jinja/index.j2
+++ b/src/jinja/index.j2
@@ -26,7 +26,7 @@
       <!-- PROJECTS -->
       {% include 'projects.j2' %}
       <!-- Certifications -->
-      {% include 'blog.j2' %}
+      {% include 'certifications.j2' %}
       <!-- CONTACT -->
       {% include 'contact.j2' %}
     </div>
