--- a/src/jinja/index.j2
+++ b/src/jinja/index.j2
@@ -25,7 +25,7 @@
       {% include 'resume.j2' %}
       <!-- PROJECTS -->
       {% include 'projects.j2' %}
-      <!-- BLOGS -->
+      <!-- Certifications -->
       {% include 'blog.j2' %}
       <!-- CONTACT -->
       {% include 'contact.j2' %}
