--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -5,7 +5,7 @@
   </header>
     <header>
     <!-- Download button -->
-    <a href="/images/CV.pdf" 
+    <a href="/src/images/CV.pdf" 
        class="download-btn"
        download>
       Download CV
