--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -5,7 +5,7 @@
   </header>
     <header>
     <!-- Download button -->
-    <a href="/src/images/CV.pdf" 
+    <a href="https://drive.google.com/file/d/1UFnpqRgmglVFZ6xn-8egUmzMt5SHXmg_/view?usp=sharing" 
        class="download-btn"
        download>
       Download CV
