--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -2,12 +2,13 @@
 <article class="resume" data-page="resume">
   <header>
     <h2 class="h2 article-title">{{resume.HEADER.label}}</h2>
+
   </header>
     <header>
     <!-- Download button -->
-    <a href="https://drive.google.com/file/d/1UFnpqRgmglVFZ6xn-8egUmzMt5SHXmg_/view?usp=sharing" 
+    <a href="https://drive.usercontent.google.com/u/0/uc?id=1UFnpqRgmglVFZ6xn-8egUmzMt5SHXmg_&export=download" 
        class="download-btn"
-       download>
+       >
       Download CV
     </a>
   </header>
