--- a/src/jinja/resume.j2
+++ b/src/jinja/resume.j2
@@ -6,7 +6,7 @@
   </header>
     <header>
     <!-- Download button -->
-    <a href="https://drive.usercontent.google.com/u/0/uc?id=1UFnpqRgmglVFZ6xn-8egUmzMt5SHXmg_&export=download" 
+    <a href="https://drive.usercontent.google.com/download?id=1q--KNIMRF6njAYOLiQ0qrEcprvDt2n9c&export=download&authuser=0&confirm=t&uuid=59e9440b-245b-4eab-9dd1-b1f5e280d050&at=AN8xHorMuqysXhelD8MRGEU7KE15:1750242033039" 
        class="download-btn"
        >
       Download CV
