--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1358,11 +1358,12 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .sidebar {
-    max-height: 180px;
+    max-height: none;
     margin-bottom: 30px;
+    overflow: visible;
   }
 
-  .sidebar.active { max-height: 584px; }
+  .sidebar.active { max-height: none; }
 
   .sidebar-info { gap: 25px; }
 
@@ -1394,6 +1395,8 @@ textarea.form-input::-webkit-resizer { display: none; }
   .contact-info {
     max-width: calc(100% - 64px);
     width: calc(100% - 64px);
+      white-space: normal; /* Allow wrapping */
+  word-break: break-word; /* Prevent long text from overflowing */
   }
 
 
